class_datos.py
    - Terminar implementación del tipo 'cordenadas_exponenciales'. ¿Es necesario usar el nuevo tipo de dato 'cordenadas_exponenciales'?
    - Normalizar vector eje en la toma general de datos, dar la opcion de elegir entre ['x','y','z','g'] -> 'g' Irse por 'vector'
        - Cambiar en ejercicios.py

ejercicio.py
!   - Queda por implementar encontrar T con los datos del robot y una lista generada de angulos.

class_tr.py
    - [Stoped] Viendo si es workfit.

T4
    - Configuraciones singulares.

P1
    [X] - Crear archivo .yaml para el brazo del laboratorio.


    - Desarrolla un código en Python que genere las gráficas correspondientes a los
    elipsoides de manipulabilidad y de fuerza para una configuración singular del robot
    2R plano y para las configuraciones con coordenadas de articulaciones (0,π/4)y
    (0,3π/4).

        - Cabiar nombre de antisimetrica() -> VecToso3sp o parecido.